--- a/app/global.css
+++ b/app/global.css
@@ -46,5 +46,6 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family:Arial, Helvetica, sans-serif;
+  margin: 0;
 }
 
